--- a/.gitmodules
+++ b/.gitmodules
@@ -3,3 +3,8 @@
 	url = https://github.com/r-universe-org/cran-to-git
 	shallow = true
 	branch = HEAD
+[submodule "SentimentAnalysis"]
+	path = SentimentAnalysis
+	url = https://github.com/sfeuerriegel/sentimentanalysis
+	shallow = true
+	registered = true
